Improve demo page

--- a/examples/nbtohtml/template.html
+++ b/examples/nbtohtml/template.html
@@ -37,7 +37,12 @@
 		></script>
 	</head>
 	<body>
-		<!-- Rendered Jupyter Notebook -->
-		{{ .NotebookHTML }}
+		<main>
+			<!-- Rendered Jupyter Notebook -->
+			{{ .NotebookHTML }}
+		</main>
+		<footer>
+			<a href="https://github.com/samuelmeuli/nbtohtml">View on GitHub</a>
+		</footer>
 	</body>
 </html>
