Add styles for dark mode

--- a/examples/nbtohtml/template.html
+++ b/examples/nbtohtml/template.html
@@ -42,7 +42,9 @@
 			{{ .NotebookHTML }}
 		</main>
 		<footer>
-			<a href="https://github.com/samuelmeuli/nbtohtml">View on GitHub</a>
+			<a href="https://github.com/samuelmeuli/nbtohtml" class="footer-link">
+				View on GitHub
+			</a>
 		</footer>
 	</body>
 </html>
